--- a/package.json
+++ b/package.json
@@ -72,7 +72,8 @@
     "webpack-dev-server": "^2.4.5"
   },
   "dependencies": {
-    "babel-polyfill": "^6.23.0"
+    "babel-polyfill": "^6.23.0",
+    "font-awesome": "^4.7.0"
   },
   "config": {
     "commitizen": {
