--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "prebuild": "npm run clean",
     "build": "cross-env NODE_ENV=production webpack --config webpack.config.build.babel.js",
     "postbuild": "npm run clean:manifest",
-    "release": "standard-version"
+    "release": "standard-version",
+    "postrelease": "bash ./deploy.sh"
   },
   "repository": {
     "type": "git",
